--- a/memos/decision-brain/goals-of-external-stay.tex
+++ b/memos/decision-brain/goals-of-external-stay.tex
@@ -2,14 +2,16 @@
 The most significant goals of the external stay are:
 
 \begin{itemize}
+% INFO: I like
 	\item Assess the feasibility of implementing my Ph.D. project in an industry setting.
+	\item Experience a modern software work environment.
 	% \item Gauge whether my Ph.D. project can be implemented in practice. 
 	\item Integrate my application into a test environment at Decision Brain, if applicable.
 	\item Get expert feedback on my scheduling methodology. 
 	\item Learn best practices for implementing scheduling solutions in industry.
 \end{itemize}
 
-It is my belief that I how developed a scalable approach to modelling a generic 
+It is my belief that I have developed a scalable approach to modelling a generic 
 maintenance scheduling system (see section~\ref{sec:technical}). I am 
 modelling something that is similar to what is described in \citet{palmerMaintenancePlanningScheduling2019} 
 which is a source that has a more practical orientation than most academic works. 
@@ -21,7 +23,7 @@ full implementation could be mutually beneficial.
 
 \newpage
 \section{Possible Setup of the External Stay}
-I propose to have a dedicated contact at Decision Brain during my external stay, with who I can discuss ideas and seek help from.
+I propose to have a dedicated contact at Decision Brain during my external stay, with whom I can discuss ideas and seek help from.
 
 \begin{itemize}
 	% TODO: This is not that great should be changed
