--- a/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_resource_subtraction_plot.tex
+++ b/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_resource_subtraction_plot.tex
@@ -1,123 +1,303 @@
 \tikzpicture[gnuplot]
 %% generated with GNUPLOT 6.0p1 (Lua 5.2; terminal rev. Jun 2020, script rev. 118)
-%% Wed 27 Nov 2024 09:22:06 AM UTC
+%% Mon 02 Dec 2024 08:22:12 PM UTC
 \path (0.000,0.000) rectangle (16.000,12.000);
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (2.424,2.025)--(15.447,2.025);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,2.697)--(2.604,2.697);
-\draw[gp path] (15.447,2.697)--(15.267,2.697);
-\node[gp node right] at (2.240,2.697) {$1.76\times10^{11}$};
-\draw[gp path] (2.424,3.459)--(2.604,3.459);
-\draw[gp path] (15.447,3.459)--(15.267,3.459);
-\node[gp node right] at (2.240,3.459) {$1.78\times10^{11}$};
-\draw[gp path] (2.424,4.220)--(2.604,4.220);
-\draw[gp path] (15.447,4.220)--(15.267,4.220);
-\node[gp node right] at (2.240,4.220) {$1.8\times10^{11}$};
-\draw[gp path] (2.424,4.982)--(2.604,4.982);
-\draw[gp path] (15.447,4.982)--(15.267,4.982);
-\node[gp node right] at (2.240,4.982) {$1.82\times10^{11}$};
-\draw[gp path] (2.424,5.744)--(2.604,5.744);
-\draw[gp path] (15.447,5.744)--(15.267,5.744);
-\node[gp node right] at (2.240,5.744) {$1.84\times10^{11}$};
-\draw[gp path] (2.424,6.505)--(2.604,6.505);
-\draw[gp path] (15.447,6.505)--(15.267,6.505);
-\node[gp node right] at (2.240,6.505) {$1.86\times10^{11}$};
-\draw[gp path] (2.424,7.267)--(2.604,7.267);
-\draw[gp path] (15.447,7.267)--(15.267,7.267);
-\node[gp node right] at (2.240,7.267) {$1.88\times10^{11}$};
-\draw[gp path] (2.424,8.028)--(2.604,8.028);
-\draw[gp path] (15.447,8.028)--(15.267,8.028);
-\node[gp node right] at (2.240,8.028) {$1.9\times10^{11}$};
-\draw[gp path] (2.424,8.790)--(2.604,8.790);
-\draw[gp path] (15.447,8.790)--(15.267,8.790);
-\node[gp node right] at (2.240,8.790) {$1.92\times10^{11}$};
-\draw[gp path] (2.424,9.552)--(2.604,9.552);
-\draw[gp path] (15.447,9.552)--(15.267,9.552);
-\node[gp node right] at (2.240,9.552) {$1.94\times10^{11}$};
-\draw[gp path] (2.424,10.313)--(2.604,10.313);
-\draw[gp path] (15.447,10.313)--(15.267,10.313);
-\node[gp node right] at (2.240,10.313) {$1.96\times10^{11}$};
+\draw[gp path] (2.424,2.025)--(2.604,2.025);
+\draw[gp path] (15.447,2.025)--(15.267,2.025);
+\node[gp node right] at (2.240,2.025) {$1.78\times10^{11}$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (2.424,2.930)--(15.447,2.930);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (2.424,2.930)--(2.604,2.930);
+\draw[gp path] (15.447,2.930)--(15.267,2.930);
+\node[gp node right] at (2.240,2.930) {$1.8\times10^{11}$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (2.424,3.835)--(15.447,3.835);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (2.424,3.835)--(2.604,3.835);
+\draw[gp path] (15.447,3.835)--(15.267,3.835);
+\node[gp node right] at (2.240,3.835) {$1.82\times10^{11}$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (2.424,4.740)--(15.447,4.740);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (2.424,4.740)--(2.604,4.740);
+\draw[gp path] (15.447,4.740)--(15.267,4.740);
+\node[gp node right] at (2.240,4.740) {$1.84\times10^{11}$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (2.424,5.645)--(15.447,5.645);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (2.424,5.645)--(2.604,5.645);
+\draw[gp path] (15.447,5.645)--(15.267,5.645);
+\node[gp node right] at (2.240,5.645) {$1.86\times10^{11}$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (2.424,6.550)--(15.447,6.550);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (2.424,6.550)--(2.604,6.550);
+\draw[gp path] (15.447,6.550)--(15.267,6.550);
+\node[gp node right] at (2.240,6.550) {$1.88\times10^{11}$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (2.424,7.455)--(15.447,7.455);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (2.424,7.455)--(2.604,7.455);
+\draw[gp path] (15.447,7.455)--(15.267,7.455);
+\node[gp node right] at (2.240,7.455) {$1.9\times10^{11}$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (2.424,8.360)--(15.447,8.360);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (2.424,8.360)--(2.604,8.360);
+\draw[gp path] (15.447,8.360)--(15.267,8.360);
+\node[gp node right] at (2.240,8.360) {$1.92\times10^{11}$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (2.424,9.265)--(15.447,9.265);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (2.424,9.265)--(2.604,9.265);
+\draw[gp path] (15.447,9.265)--(15.267,9.265);
+\node[gp node right] at (2.240,9.265) {$1.94\times10^{11}$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (2.424,10.170)--(15.447,10.170);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (2.424,10.170)--(2.604,10.170);
+\draw[gp path] (15.447,10.170)--(15.267,10.170);
+\node[gp node right] at (2.240,10.170) {$1.96\times10^{11}$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (2.424,11.075)--(15.447,11.075);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
 \draw[gp path] (2.424,11.075)--(2.604,11.075);
 \draw[gp path] (15.447,11.075)--(15.267,11.075);
 \node[gp node right] at (2.240,11.075) {$1.98\times10^{11}$};
-\draw[gp path] (2.424,2.697)--(2.424,2.517);
-\draw[gp path] (2.424,11.075)--(2.424,11.255);
-\node[gp node left,rotate=270] at (2.424,2.333) {$1.7327\times10^{9}$};
-\draw[gp path] (3.871,2.697)--(3.871,2.517);
-\draw[gp path] (3.871,11.075)--(3.871,11.255);
-\node[gp node left,rotate=270] at (3.871,2.333) {$1.7327\times10^{9}$};
-\draw[gp path] (5.318,2.697)--(5.318,2.517);
-\draw[gp path] (5.318,11.075)--(5.318,11.255);
-\node[gp node left,rotate=270] at (5.318,2.333) {$1.7327\times10^{9}$};
-\draw[gp path] (6.765,2.697)--(6.765,2.517);
-\draw[gp path] (6.765,11.075)--(6.765,11.255);
-\node[gp node left,rotate=270] at (6.765,2.333) {$1.7327\times10^{9}$};
-\draw[gp path] (8.212,2.697)--(8.212,2.517);
-\draw[gp path] (8.212,11.075)--(8.212,11.255);
-\node[gp node left,rotate=270] at (8.212,2.333) {$1.7327\times10^{9}$};
-\draw[gp path] (9.659,2.697)--(9.659,2.517);
-\draw[gp path] (9.659,11.075)--(9.659,11.255);
-\node[gp node left,rotate=270] at (9.659,2.333) {$1.7327\times10^{9}$};
-\draw[gp path] (11.106,2.697)--(11.106,2.517);
-\draw[gp path] (11.106,11.075)--(11.106,11.255);
-\node[gp node left,rotate=270] at (11.106,2.333) {$1.7327\times10^{9}$};
-\draw[gp path] (12.553,2.697)--(12.553,2.517);
-\draw[gp path] (12.553,11.075)--(12.553,11.255);
-\node[gp node left,rotate=270] at (12.553,2.333) {$1.7327\times10^{9}$};
-\draw[gp path] (14.000,2.697)--(14.000,2.517);
-\draw[gp path] (14.000,11.075)--(14.000,11.255);
-\node[gp node left,rotate=270] at (14.000,2.333) {$1.7327\times10^{9}$};
-\draw[gp path] (15.447,2.697)--(15.447,2.517);
-\draw[gp path] (15.447,11.075)--(15.447,11.255);
-\node[gp node left,rotate=270] at (15.447,2.333) {$1.7327\times10^{9}$};
-\draw[gp path] (2.424,11.075)--(2.424,2.697)--(15.447,2.697)--(15.447,11.075)--cycle;
-\gpcolor{rgb color={0.580,0.000,0.827}}
-\draw[gp path] (3.437,10.237)--(3.437,10.186)--(3.582,10.099)--(3.582,10.063)--(3.582,9.970)%
-  --(3.582,9.938)--(3.582,9.922)--(3.582,9.847)--(3.582,9.823)--(3.726,9.803)--(3.726,9.796)%
-  --(3.726,9.788)--(3.726,9.727)--(3.726,9.714)--(3.726,9.694)--(3.726,9.659)--(3.726,9.626)%
-  --(3.871,9.524)--(3.871,9.521)--(3.871,9.505)--(3.871,9.498)--(3.871,9.457)--(4.016,9.411)%
-  --(4.016,9.390)--(4.016,9.379)--(4.016,9.365)--(4.016,9.349)--(4.160,9.339)--(4.160,9.316)%
-  --(4.160,9.294)--(4.160,9.248)--(4.160,9.226)--(4.160,9.208)--(4.305,9.201)--(4.305,9.192)%
-  --(4.305,9.184)--(4.305,8.888)--(4.450,8.799)--(4.450,8.782)--(4.450,8.784)--(4.450,8.716)%
-  --(4.595,8.677)--(4.595,8.779)--(4.595,8.664)--(4.739,8.689)--(4.739,8.701)--(4.739,8.609)%
-  --(4.884,8.622)--(4.884,8.637)--(4.884,8.522)--(5.029,8.474)--(5.029,8.478)--(5.029,8.542)%
-  --(5.029,8.435)--(5.173,8.477)--(5.173,8.444)--(5.318,8.444)--(5.318,8.515)--(5.318,8.455)%
-  --(5.463,8.463)--(5.463,8.500)--(5.463,8.481)--(5.463,8.468)--(5.607,8.401)--(5.607,8.446)%
-  --(5.607,8.391)--(5.752,8.380)--(5.752,8.390)--(5.752,8.372)--(5.897,8.318)--(5.897,8.309)%
-  --(5.897,8.328)--(5.897,8.349)--(6.042,8.343)--(6.042,8.329)--(6.186,8.341)--(6.186,8.339)%
-  --(6.186,8.308)--(6.186,8.307)--(6.331,8.347)--(6.331,8.404)--(6.331,8.398)--(6.331,8.281)%
-  --(6.476,8.286)--(6.476,8.214)--(6.620,8.247)--(6.620,8.219)--(6.765,8.247)--(6.765,8.266)%
-  --(6.765,8.270)--(6.910,8.230)--(6.910,8.138)--(6.910,8.218)--(7.054,8.198)--(7.054,8.250)%
-  --(7.054,8.234)--(7.054,8.202)--(7.199,3.957)--(7.199,3.823)--(7.199,3.787)--(7.199,3.805)%
-  --(7.344,3.795)--(7.344,3.778)--(7.344,3.769)--(7.344,3.745)--(7.489,3.721)--(7.489,3.752)%
-  --(7.489,3.681)--(7.489,3.692)--(7.633,3.531)--(7.633,3.426)--(7.778,3.405)--(7.778,3.364)%
-  --(7.778,3.145)--(7.923,3.318)--(7.923,3.221)--(7.923,3.313)--(7.923,3.271)--(8.067,3.291)%
-  --(8.067,3.221)--(8.212,3.272)--(8.212,3.289)--(8.212,3.209)--(8.357,3.269)--(8.501,3.256)%
-  --(8.646,3.246)--(8.646,3.241)--(8.646,3.250)--(8.936,3.257)--(9.080,3.215)--(9.080,3.247)%
-  --(9.225,3.252)--(9.370,3.180)--(9.370,3.174)--(9.370,3.220)--(9.514,3.211)--(9.659,3.137)%
-  --(9.659,3.085)--(9.659,3.182)--(9.804,3.153)--(9.804,3.190)--(9.948,3.200)--(9.948,3.182)%
-  --(10.093,6.299)--(10.093,6.243)--(10.238,6.209)--(10.238,6.174)--(10.238,6.106)--(10.383,6.064)%
-  --(10.383,6.087)--(10.383,6.024)--(10.527,5.965)--(10.527,5.951)--(10.527,5.963)--(10.672,5.901)%
-  --(10.672,5.857)--(10.672,5.869)--(10.817,5.849)--(10.817,5.846)--(10.817,5.778)--(10.961,5.789)%
-  --(10.961,5.761)--(10.961,5.749)--(11.106,5.797)--(11.106,5.703)--(11.106,5.789)--(11.251,5.783)%
-  --(11.395,5.653)--(11.395,5.681)--(11.540,5.697)--(11.540,5.647)--(11.685,5.682)--(11.685,5.626)%
-  --(11.830,5.655)--(11.830,5.673)--(11.830,5.618)--(11.974,5.625)--(11.974,5.657)--(12.119,5.639)%
-  --(12.264,5.609)--(12.264,5.583)--(12.264,5.620)--(12.408,5.613)--(12.408,5.633)--(12.408,5.582)%
-  --(12.408,5.650)--(12.553,5.621)--(12.553,5.646)--(12.553,5.640)--(12.698,5.630)--(12.698,5.627)%
-  --(12.698,5.619)--(12.842,5.647)--(12.842,5.644)--(12.842,5.700)--(12.987,10.593)--(12.987,10.526)%
-  --(13.132,10.480)--(13.132,10.401)--(13.132,10.310)--(13.132,10.264)--(13.277,10.230)--(13.277,10.162)%
-  --(13.421,10.108)--(13.421,10.080)--(13.421,10.026)--(13.566,9.994)--(13.566,9.965)--(13.711,9.971)%
-  --(13.855,9.954)--(13.855,9.929)--(14.000,9.930)--(14.000,9.882)--(14.145,9.888)--(14.145,9.892)%
-  --(14.145,9.943)--(14.289,9.850)--(14.289,9.928)--(14.434,9.923)--(14.579,9.913)--(14.723,9.898)%
-  --(14.723,9.920)--(14.868,9.874)--(14.868,9.862);
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (2.424,2.025)--(2.424,11.075);
 \gpcolor{color=gp lt color border}
-\draw[gp path] (2.424,11.075)--(2.424,2.697)--(15.447,2.697)--(15.447,11.075)--cycle;
-\node[gp node center,rotate=-270] at (0.292,6.886) {Objective value};
-\node[gp node center] at (8.935,0.215) {Absolute time};
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (2.424,2.025)--(2.424,1.845);
+\draw[gp path] (2.424,11.075)--(2.424,11.255);
+\node[gp node left,rotate=270] at (2.424,1.661) {$0$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (4.595,2.025)--(4.595,11.075);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (4.595,2.025)--(4.595,1.845);
+\draw[gp path] (4.595,11.075)--(4.595,11.255);
+\node[gp node left,rotate=270] at (4.595,1.661) {$50$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (6.765,2.025)--(6.765,11.075);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (6.765,2.025)--(6.765,1.845);
+\draw[gp path] (6.765,11.075)--(6.765,11.255);
+\node[gp node left,rotate=270] at (6.765,1.661) {$100$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (8.936,2.025)--(8.936,11.075);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (8.936,2.025)--(8.936,1.845);
+\draw[gp path] (8.936,11.075)--(8.936,11.255);
+\node[gp node left,rotate=270] at (8.936,1.661) {$150$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (11.106,2.025)--(11.106,11.075);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (11.106,2.025)--(11.106,1.845);
+\draw[gp path] (11.106,11.075)--(11.106,11.255);
+\node[gp node left,rotate=270] at (11.106,1.661) {$200$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (13.277,2.025)--(13.277,11.075);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (13.277,2.025)--(13.277,1.845);
+\draw[gp path] (13.277,11.075)--(13.277,11.255);
+\node[gp node left,rotate=270] at (13.277,1.661) {$250$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (15.447,2.025)--(15.447,11.075);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (15.447,2.025)--(15.447,1.845);
+\draw[gp path] (15.447,11.075)--(15.447,11.255);
+\node[gp node left,rotate=270] at (15.447,1.661) {$300$};
+\draw[gp path] (2.424,11.075)--(2.424,2.025)--(15.447,2.025)--(15.447,11.075)--cycle;
+\gpcolor{rgb color={0.000,0.000,0.000}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (2.424,10.123)--(2.424,9.914)--(2.424,9.852)--(2.424,9.831)--(2.424,9.786)%
+  --(2.424,9.737)--(2.424,9.686)--(2.424,9.642)--(2.424,9.641)--(2.467,9.630)--(2.467,9.566)%
+  --(2.467,9.563)--(2.467,9.557)--(2.467,9.493)--(2.467,9.446)--(2.467,9.442)--(2.511,9.426)%
+  --(2.511,9.402)--(2.511,9.384)--(2.511,9.302)--(2.511,9.274)--(2.511,9.254)--(2.511,9.245)%
+  --(2.554,9.209)--(2.554,9.193)--(2.554,9.178)--(2.554,9.169)--(2.554,9.140)--(2.554,9.133)%
+  --(2.598,9.129)--(2.598,9.115)--(2.598,9.112)--(2.598,9.080)--(2.598,9.030)--(2.641,9.008)%
+  --(2.641,8.950)--(2.641,8.854)--(2.641,8.826)--(2.641,8.783)--(2.684,8.764)--(2.684,8.723)%
+  --(2.684,8.698)--(2.684,8.688)--(2.684,8.678)--(2.728,8.617)--(2.728,8.614)--(2.728,8.605)%
+  --(2.728,8.589)--(2.771,8.584)--(2.771,8.531)--(2.815,8.477)--(2.815,8.456)--(2.815,8.452)%
+  --(2.815,8.358)--(2.815,8.332)--(2.815,8.323)--(2.858,8.313)--(2.858,8.298)--(2.902,8.284)%
+  --(2.902,8.277)--(2.945,8.259)--(2.988,8.247)--(2.988,8.245)--(2.988,8.239)--(3.032,8.227)%
+  --(3.075,8.224)--(3.075,8.221)--(3.119,8.215)--(3.119,8.213)--(3.119,8.188)--(3.162,8.177)%
+  --(3.162,8.175)--(3.162,8.172)--(3.205,8.168)--(3.292,8.163)--(3.336,8.162)--(3.336,8.160)%
+  --(3.379,8.158)--(3.379,8.153)--(3.422,8.150)--(3.466,8.143)--(3.553,8.139)--(3.639,8.132)%
+  --(3.639,8.129)--(3.683,8.128)--(3.683,8.123)--(3.726,8.121)--(3.770,8.114)--(3.857,8.112)%
+  --(3.857,8.103)--(3.900,8.099)--(3.943,8.094)--(3.943,8.090)--(4.074,8.085)--(4.117,8.078)%
+  --(4.117,8.075)--(4.160,8.073)--(4.160,8.071)--(4.334,8.066)--(4.421,8.065)--(4.421,8.058)%
+  --(4.464,8.042)--(4.464,8.037)--(4.508,8.034)--(4.595,8.032)--(4.595,8.022)--(4.638,8.019)%
+  --(4.681,8.015)--(4.768,8.013)--(4.768,8.006)--(4.855,8.006)--(4.942,7.992)--(5.072,7.981)%
+  --(5.072,7.978)--(5.202,7.975)--(5.246,7.972)--(5.289,7.967)--(5.332,7.958)--(5.376,7.956)%
+  --(5.506,7.951)--(5.506,7.947)--(5.550,7.947)--(5.593,7.944)--(5.636,7.944)--(5.680,7.941)%
+  --(5.810,7.937)--(5.897,7.936)--(5.984,7.932)--(6.027,7.929)--(6.114,7.928)--(6.157,7.927)%
+  --(6.287,7.926)--(6.287,7.925)--(6.374,7.924)--(6.374,7.916)--(6.505,5.162)--(6.505,4.968)%
+  --(6.505,4.789)--(6.548,4.733)--(6.548,4.693)--(6.548,4.655)--(6.548,4.536)--(6.548,4.496)%
+  --(6.548,4.465)--(6.548,4.234)--(6.548,4.200)--(6.591,4.174)--(6.591,4.165)--(6.591,4.150)%
+  --(6.591,4.138)--(6.591,4.103)--(6.591,4.069)--(6.591,4.044)--(6.591,4.034)--(6.591,4.008)%
+  --(6.635,3.980)--(6.635,3.843)--(6.635,3.822)--(6.635,3.814)--(6.635,3.808)--(6.635,3.794)%
+  --(6.678,3.664)--(6.678,3.650)--(6.678,3.633)--(6.678,3.619)--(6.678,3.610)--(6.678,3.454)%
+  --(6.722,3.454)--(6.722,3.437)--(6.722,3.435)--(6.722,3.430)--(6.722,3.257)--(6.722,3.256)%
+  --(6.722,3.161)--(6.722,3.152)--(6.765,3.150)--(6.765,3.136)--(6.765,2.831)--(6.765,2.823)%
+  --(6.765,2.816)--(6.808,2.805)--(6.808,2.802)--(6.808,2.787)--(6.808,2.784)--(6.808,2.781)%
+  --(6.808,2.776)--(6.852,2.654)--(6.852,2.653)--(6.852,2.651)--(6.852,2.639)--(6.895,2.637)%
+  --(6.895,2.634)--(6.895,2.623)--(6.895,2.609)--(6.939,2.598)--(6.939,2.593)--(6.939,2.581)%
+  --(6.982,2.574)--(6.982,2.559)--(6.982,2.558)--(7.069,2.556)--(7.112,2.550)--(7.112,2.547)%
+  --(7.156,2.543)--(7.156,2.538)--(7.199,2.536)--(7.199,2.532)--(7.199,2.530)--(7.243,2.525)%
+  --(7.243,2.521)--(7.243,2.517)--(7.286,2.516)--(7.243,2.512)--(7.286,2.512)--(7.286,2.492)%
+  --(7.286,2.483)--(7.329,2.483)--(7.329,2.479)--(7.329,2.470)--(7.329,2.467)--(7.373,2.459)%
+  --(7.373,2.453)--(7.373,2.440)--(7.416,2.308)--(7.460,2.302)--(7.460,2.296)--(7.503,2.294)%
+  --(7.546,2.285)--(7.546,2.276)--(7.546,2.272)--(7.590,2.267)--(7.633,2.255)--(7.677,2.254)%
+  --(7.677,2.252)--(7.720,2.250)--(7.720,2.249)--(7.807,2.245)--(7.894,2.243)--(8.024,2.236)%
+  --(8.024,2.227)--(8.111,2.222)--(8.198,2.222)--(8.284,2.220)--(8.328,2.212)--(8.328,2.210)%
+  --(8.371,2.199)--(8.415,2.197)--(8.458,2.197)--(8.501,2.195)--(8.675,2.191)--(8.762,2.191)%
+  --(8.892,2.188)--(8.936,2.184)--(8.979,2.184)--(9.066,2.182)--(9.109,2.179)--(9.153,2.179)%
+  --(9.196,2.178)--(9.196,2.172)--(9.196,2.164)--(9.239,2.160)--(9.326,2.157)--(9.370,2.155)%
+  --(9.413,2.153)--(9.413,2.152)--(9.413,2.148)--(9.413,2.141)--(9.500,2.139)--(9.543,2.137)%
+  --(9.587,2.135)--(9.630,2.133)--(9.673,2.132)--(9.673,2.122)--(9.891,2.117)--(9.977,2.116)%
+  --(10.151,2.114)--(10.151,2.112)--(10.194,2.110)--(10.281,2.109)--(10.325,2.107)--(10.498,2.107)%
+  --(10.542,2.105)--(10.542,2.101)--(10.802,6.618)--(10.802,6.507)--(10.802,6.326)--(10.802,6.185)%
+  --(10.802,5.976)--(10.802,5.899)--(10.846,5.851)--(10.846,5.761)--(10.846,5.701)--(10.846,5.670)%
+  --(10.846,5.567)--(10.846,5.510)--(10.889,5.493)--(10.889,5.471)--(10.889,5.444)--(10.889,5.429)%
+  --(10.889,5.409)--(10.889,5.396)--(10.932,5.373)--(10.932,5.306)--(10.932,5.267)--(10.932,5.265)%
+  --(10.932,5.256)--(10.932,5.249)--(10.976,5.225)--(10.976,5.214)--(10.976,5.196)--(11.019,5.192)%
+  --(11.019,5.185)--(11.019,5.163)--(11.063,5.140)--(11.063,5.108)--(11.063,5.100)--(11.063,5.079)%
+  --(11.106,5.064)--(11.106,5.054)--(11.106,5.043)--(11.106,5.023)--(11.106,5.020)--(11.149,5.004)%
+  --(11.149,4.981)--(11.149,4.972)--(11.193,4.967)--(11.193,4.955)--(11.236,4.955)--(11.236,4.953)%
+  --(11.280,4.944)--(11.280,4.941)--(11.323,4.939)--(11.323,4.921)--(11.323,4.911)--(11.323,4.909)%
+  --(11.366,4.909)--(11.366,4.908)--(11.366,4.907)--(11.410,4.902)--(11.366,4.891)--(11.410,4.890)%
+  --(11.410,4.886)--(11.453,4.876)--(11.497,4.864)--(11.584,4.857)--(11.627,4.838)--(11.627,4.830)%
+  --(11.627,4.824)--(11.714,4.819)--(11.757,4.814)--(11.757,4.802)--(11.757,4.792)--(11.801,4.790)%
+  --(11.844,4.774)--(11.887,4.768)--(11.931,4.749)--(11.931,4.748)--(11.974,4.743)--(11.974,4.742)%
+  --(12.018,4.741)--(12.018,4.739)--(12.018,4.737)--(12.061,4.719)--(12.104,4.715)--(12.104,4.708)%
+  --(12.148,4.703)--(12.148,4.701)--(12.191,4.696)--(12.191,4.684)--(12.278,4.680)--(12.365,4.676)%
+  --(12.408,4.676)--(12.408,4.674)--(12.452,4.672)--(12.539,4.671)--(12.539,4.670)--(12.539,4.668)%
+  --(12.539,4.661)--(12.539,4.652)--(12.625,4.645)--(12.669,4.641)--(12.756,4.631)--(12.886,4.628)%
+  --(12.929,4.626)--(12.973,4.621)--(13.016,4.619)--(13.016,4.615)--(13.059,4.615)--(13.059,4.606)%
+  --(13.059,4.603)--(13.103,4.597)--(13.146,4.593)--(13.190,4.591)--(13.233,4.584)--(13.277,4.579)%
+  --(13.407,4.577)--(13.450,4.575)--(13.537,4.570)--(13.580,4.569)--(13.711,4.568)--(13.884,4.563)%
+  --(14.014,4.563)--(14.014,4.562)--(14.232,4.560)--(14.449,4.558)--(14.492,4.558)--(14.492,4.557)%
+  --(14.535,4.555)--(14.622,4.555)--(14.666,4.552)--(14.666,4.551)--(14.796,4.547)--(15.056,4.541)%
+  --(15.056,10.583)--(15.056,10.516)--(15.056,10.412);
+\gpcolor{color=gp lt color border}
+\gpsetlinewidth{1.00}
+\draw[gp path] (2.424,11.075)--(2.424,2.025)--(15.447,2.025)--(15.447,11.075)--cycle;
+\node[gp node center,rotate=-270] at (-0.812,6.550) {Objective value};
+\node[gp node center] at (8.935,0.215) {Relative time [S]};
 \node[gp node center] at (8.935,11.537) {Objective value for Weekly Schedule};
 %% coordinates of the plot area
-\gpdefrectangularnode{gp plot 1}{\pgfpoint{2.424cm}{2.697cm}}{\pgfpoint{15.447cm}{11.075cm}}
+\gpdefrectangularnode{gp plot 1}{\pgfpoint{2.424cm}{2.025cm}}{\pgfpoint{15.447cm}{11.075cm}}
 \endtikzpicture
 %% gnuplot variables
