--- a/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_resource_addition_plot.tex
+++ b/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_resource_addition_plot.tex
@@ -1,153 +1,271 @@
 \tikzpicture[gnuplot]
 %% generated with GNUPLOT 6.0p1 (Lua 5.2; terminal rev. Jun 2020, script rev. 118)
-%% Wed 27 Nov 2024 09:15:11 AM UTC
+%% Mon 02 Dec 2024 08:17:11 PM UTC
 \path (0.000,0.000) rectangle (16.000,12.000);
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (2.424,2.025)--(15.447,2.025);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,2.697)--(2.604,2.697);
-\draw[gp path] (15.447,2.697)--(15.267,2.697);
-\node[gp node right] at (2.240,2.697) {$1.76\times10^{11}$};
-\draw[gp path] (2.424,3.459)--(2.604,3.459);
-\draw[gp path] (15.447,3.459)--(15.267,3.459);
-\node[gp node right] at (2.240,3.459) {$1.78\times10^{11}$};
-\draw[gp path] (2.424,4.220)--(2.604,4.220);
-\draw[gp path] (15.447,4.220)--(15.267,4.220);
-\node[gp node right] at (2.240,4.220) {$1.8\times10^{11}$};
-\draw[gp path] (2.424,4.982)--(2.604,4.982);
-\draw[gp path] (15.447,4.982)--(15.267,4.982);
-\node[gp node right] at (2.240,4.982) {$1.82\times10^{11}$};
-\draw[gp path] (2.424,5.744)--(2.604,5.744);
-\draw[gp path] (15.447,5.744)--(15.267,5.744);
-\node[gp node right] at (2.240,5.744) {$1.84\times10^{11}$};
-\draw[gp path] (2.424,6.505)--(2.604,6.505);
-\draw[gp path] (15.447,6.505)--(15.267,6.505);
-\node[gp node right] at (2.240,6.505) {$1.86\times10^{11}$};
-\draw[gp path] (2.424,7.267)--(2.604,7.267);
-\draw[gp path] (15.447,7.267)--(15.267,7.267);
-\node[gp node right] at (2.240,7.267) {$1.88\times10^{11}$};
-\draw[gp path] (2.424,8.028)--(2.604,8.028);
-\draw[gp path] (15.447,8.028)--(15.267,8.028);
-\node[gp node right] at (2.240,8.028) {$1.9\times10^{11}$};
-\draw[gp path] (2.424,8.790)--(2.604,8.790);
-\draw[gp path] (15.447,8.790)--(15.267,8.790);
-\node[gp node right] at (2.240,8.790) {$1.92\times10^{11}$};
-\draw[gp path] (2.424,9.552)--(2.604,9.552);
-\draw[gp path] (15.447,9.552)--(15.267,9.552);
-\node[gp node right] at (2.240,9.552) {$1.94\times10^{11}$};
-\draw[gp path] (2.424,10.313)--(2.604,10.313);
-\draw[gp path] (15.447,10.313)--(15.267,10.313);
-\node[gp node right] at (2.240,10.313) {$1.96\times10^{11}$};
+\draw[gp path] (2.424,2.025)--(2.604,2.025);
+\draw[gp path] (15.447,2.025)--(15.267,2.025);
+\node[gp node right] at (2.240,2.025) {$1.8\times10^{11}$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (2.424,3.031)--(15.447,3.031);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (2.424,3.031)--(2.604,3.031);
+\draw[gp path] (15.447,3.031)--(15.267,3.031);
+\node[gp node right] at (2.240,3.031) {$1.82\times10^{11}$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (2.424,4.036)--(15.447,4.036);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (2.424,4.036)--(2.604,4.036);
+\draw[gp path] (15.447,4.036)--(15.267,4.036);
+\node[gp node right] at (2.240,4.036) {$1.84\times10^{11}$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (2.424,5.042)--(15.447,5.042);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (2.424,5.042)--(2.604,5.042);
+\draw[gp path] (15.447,5.042)--(15.267,5.042);
+\node[gp node right] at (2.240,5.042) {$1.86\times10^{11}$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (2.424,6.047)--(15.447,6.047);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (2.424,6.047)--(2.604,6.047);
+\draw[gp path] (15.447,6.047)--(15.267,6.047);
+\node[gp node right] at (2.240,6.047) {$1.88\times10^{11}$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (2.424,7.053)--(15.447,7.053);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (2.424,7.053)--(2.604,7.053);
+\draw[gp path] (15.447,7.053)--(15.267,7.053);
+\node[gp node right] at (2.240,7.053) {$1.9\times10^{11}$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (2.424,8.058)--(15.447,8.058);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (2.424,8.058)--(2.604,8.058);
+\draw[gp path] (15.447,8.058)--(15.267,8.058);
+\node[gp node right] at (2.240,8.058) {$1.92\times10^{11}$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (2.424,9.064)--(15.447,9.064);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (2.424,9.064)--(2.604,9.064);
+\draw[gp path] (15.447,9.064)--(15.267,9.064);
+\node[gp node right] at (2.240,9.064) {$1.94\times10^{11}$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (2.424,10.069)--(15.447,10.069);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (2.424,10.069)--(2.604,10.069);
+\draw[gp path] (15.447,10.069)--(15.267,10.069);
+\node[gp node right] at (2.240,10.069) {$1.96\times10^{11}$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (2.424,11.075)--(15.447,11.075);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
 \draw[gp path] (2.424,11.075)--(2.604,11.075);
 \draw[gp path] (15.447,11.075)--(15.267,11.075);
 \node[gp node right] at (2.240,11.075) {$1.98\times10^{11}$};
-\draw[gp path] (2.424,2.697)--(2.424,2.517);
-\draw[gp path] (2.424,11.075)--(2.424,11.255);
-\node[gp node left,rotate=270] at (2.424,2.333) {$1.7327\times10^{9}$};
-\draw[gp path] (3.871,2.697)--(3.871,2.517);
-\draw[gp path] (3.871,11.075)--(3.871,11.255);
-\node[gp node left,rotate=270] at (3.871,2.333) {$1.7327\times10^{9}$};
-\draw[gp path] (5.318,2.697)--(5.318,2.517);
-\draw[gp path] (5.318,11.075)--(5.318,11.255);
-\node[gp node left,rotate=270] at (5.318,2.333) {$1.7327\times10^{9}$};
-\draw[gp path] (6.765,2.697)--(6.765,2.517);
-\draw[gp path] (6.765,11.075)--(6.765,11.255);
-\node[gp node left,rotate=270] at (6.765,2.333) {$1.7327\times10^{9}$};
-\draw[gp path] (8.212,2.697)--(8.212,2.517);
-\draw[gp path] (8.212,11.075)--(8.212,11.255);
-\node[gp node left,rotate=270] at (8.212,2.333) {$1.7327\times10^{9}$};
-\draw[gp path] (9.659,2.697)--(9.659,2.517);
-\draw[gp path] (9.659,11.075)--(9.659,11.255);
-\node[gp node left,rotate=270] at (9.659,2.333) {$1.7327\times10^{9}$};
-\draw[gp path] (11.106,2.697)--(11.106,2.517);
-\draw[gp path] (11.106,11.075)--(11.106,11.255);
-\node[gp node left,rotate=270] at (11.106,2.333) {$1.7327\times10^{9}$};
-\draw[gp path] (12.553,2.697)--(12.553,2.517);
-\draw[gp path] (12.553,11.075)--(12.553,11.255);
-\node[gp node left,rotate=270] at (12.553,2.333) {$1.7327\times10^{9}$};
-\draw[gp path] (14.000,2.697)--(14.000,2.517);
-\draw[gp path] (14.000,11.075)--(14.000,11.255);
-\node[gp node left,rotate=270] at (14.000,2.333) {$1.7327\times10^{9}$};
-\draw[gp path] (15.447,2.697)--(15.447,2.517);
-\draw[gp path] (15.447,11.075)--(15.447,11.255);
-\node[gp node left,rotate=270] at (15.447,2.333) {$1.7327\times10^{9}$};
-\draw[gp path] (2.424,11.075)--(2.424,2.697)--(15.447,2.697)--(15.447,11.075)--cycle;
-\gpcolor{rgb color={0.580,0.000,0.827}}
-\draw[gp path] (3.799,10.388)--(3.799,10.234)--(3.799,10.197)--(3.799,10.174)--(3.799,10.102)%
-  --(3.871,10.082)--(3.871,10.068)--(3.871,10.030)--(3.871,9.979)--(3.871,9.963)--(3.871,9.928)%
-  --(3.871,9.891)--(3.943,9.872)--(3.943,9.815)--(3.943,9.801)--(3.943,9.794)--(4.016,9.767)%
-  --(4.016,9.758)--(4.016,9.745)--(4.016,9.730)--(4.016,9.728)--(4.016,9.722)--(4.016,9.677)%
-  --(4.016,9.607)--(4.016,9.606)--(4.088,9.591)--(4.088,9.571)--(4.088,9.524)--(4.160,9.515)%
-  --(4.160,9.511)--(4.160,9.486)--(4.160,9.477)--(4.160,9.458)--(4.160,9.454)--(4.160,9.439)%
-  --(4.233,9.125)--(4.233,9.022)--(4.233,9.088)--(4.233,8.970)--(4.233,8.854)--(4.305,8.915)%
-  --(4.305,8.905)--(4.305,8.861)--(4.377,8.881)--(4.377,8.781)--(4.377,8.831)--(4.450,8.796)%
-  --(4.450,8.758)--(4.450,8.832)--(4.450,8.810)--(4.522,8.762)--(4.522,8.723)--(4.522,8.736)%
-  --(4.595,8.715)--(4.595,8.698)--(4.667,8.728)--(4.667,8.713)--(4.667,8.658)--(4.667,8.685)%
-  --(4.739,8.719)--(4.739,8.701)--(4.739,8.684)--(4.812,8.589)--(4.812,8.622)--(4.812,8.624)%
-  --(4.812,8.601)--(4.884,8.653)--(4.884,8.525)--(4.956,8.533)--(4.956,8.606)--(5.029,8.528)%
-  --(5.029,8.584)--(5.029,8.591)--(5.101,8.473)--(5.101,8.564)--(5.101,8.552)--(5.101,8.572)%
-  --(5.173,8.588)--(5.173,8.615)--(5.246,8.534)--(5.246,8.578)--(5.246,8.586)--(5.318,8.577)%
-  --(5.318,8.538)--(5.318,8.482)--(5.318,8.432)--(5.390,8.476)--(5.390,8.475)--(5.390,8.502)%
-  --(5.463,8.471)--(5.535,8.479)--(5.535,8.430)--(5.607,8.474)--(5.607,8.375)--(5.607,10.530)%
-  --(5.607,10.579)--(5.607,10.529)--(5.680,10.506)--(5.680,10.517)--(5.752,10.471)--(5.752,10.312)%
-  --(5.824,10.343)--(5.824,10.417)--(5.824,10.365)--(5.897,10.310)--(5.897,10.307)--(5.897,10.339)%
-  --(5.969,10.257)--(5.969,10.335)--(5.969,10.358)--(6.042,10.324)--(6.186,10.276)--(6.186,10.284)%
-  --(6.186,10.283)--(6.331,10.281)--(6.476,10.286)--(6.476,10.296)--(6.548,10.265)--(6.548,10.271)%
-  --(6.693,10.238)--(6.765,10.266)--(6.837,10.314)--(6.910,10.323)--(6.910,10.302)--(6.982,10.245)%
-  --(6.982,10.305)--(6.982,10.275)--(7.054,10.247)--(7.054,10.256)--(7.054,10.243)--(7.054,7.049)%
-  --(7.127,7.001)--(7.127,6.919)--(7.127,7.013)--(7.199,6.915)--(7.199,6.858)--(7.199,6.829)%
-  --(7.271,6.697)--(7.271,6.666)--(7.271,6.704)--(7.271,6.660)--(7.344,6.698)--(7.344,6.662)%
-  --(7.344,6.621)--(7.416,6.616)--(7.416,6.583)--(7.416,6.617)--(7.416,6.608)--(7.489,6.542)%
-  --(7.489,6.522)--(7.489,6.443)--(7.561,6.391)--(7.561,6.392)--(7.561,6.287)--(7.633,6.282)%
-  --(7.633,6.302)--(7.633,6.305)--(7.706,6.240)--(7.706,6.265)--(7.706,6.282)--(7.778,6.291)%
-  --(7.850,6.306)--(7.850,6.199)--(7.850,6.203)--(7.923,6.275)--(7.923,6.284)--(7.995,6.265)%
-  --(7.995,6.247)--(8.067,6.220)--(8.067,6.203)--(8.067,6.206)--(8.140,6.182)--(8.140,6.196)%
-  --(8.140,6.177)--(8.212,6.151)--(8.212,6.157)--(8.284,6.188)--(8.284,6.142)--(8.357,6.162)%
-  --(8.357,6.163)--(8.429,6.168)--(8.429,6.126)--(8.429,6.160)--(8.429,6.167)--(8.501,6.107)%
-  --(8.574,3.847)--(8.574,3.843)--(8.574,3.751)--(8.574,3.737)--(8.646,3.752)--(8.646,3.784)%
-  --(8.646,3.790)--(8.718,3.777)--(8.718,3.772)--(8.718,3.783)--(8.718,3.768)--(8.791,3.767)%
-  --(8.791,3.768)--(8.863,3.652)--(8.863,3.775)--(8.936,3.759)--(8.936,3.698)--(9.008,3.754)%
-  --(9.008,3.610)--(9.008,3.604)--(9.008,3.644)--(9.080,3.684)--(9.080,3.628)--(9.153,3.684)%
-  --(9.153,3.655)--(9.225,3.668)--(9.225,3.674)--(9.225,3.620)--(9.297,3.655)--(9.297,3.662)%
-  --(9.370,3.635)--(9.370,3.608)--(9.442,3.584)--(9.442,3.501)--(9.514,3.487)--(9.587,3.440)%
-  --(9.587,3.457)--(9.587,3.485)--(9.587,3.461)--(9.659,3.456)--(9.659,3.416)--(9.731,3.414)%
-  --(9.804,3.472)--(9.804,3.445)--(9.876,3.401)--(9.876,3.396)--(9.876,3.437)--(9.948,3.390)%
-  --(9.948,3.451)--(9.948,3.423)--(10.021,3.457)--(10.021,3.429)--(10.093,3.464)--(10.093,3.446)%
-  --(10.093,3.408)--(10.093,3.471)--(10.165,3.463)--(10.165,3.419)--(10.165,3.481)--(10.238,3.424)%
-  --(10.238,3.472)--(10.310,3.371)--(10.310,3.442)--(10.310,3.434)--(10.383,3.398)--(10.383,3.314)%
-  --(10.455,3.372)--(10.455,3.274)--(10.455,3.366)--(10.527,3.353)--(10.527,3.386)--(10.600,3.387)%
-  --(10.600,3.350)--(10.600,3.336)--(10.600,3.350)--(10.672,3.276)--(10.672,3.293)--(10.744,3.350)%
-  --(10.744,3.342)--(10.817,3.316)--(10.817,3.310)--(10.817,3.309)--(10.817,3.347)--(10.889,3.330)%
-  --(10.889,3.338)--(10.961,3.326)--(10.961,3.336)--(11.106,3.315)--(11.106,3.343)--(11.106,3.312)%
-  --(11.178,3.321)--(11.178,3.337)--(11.178,3.281)--(11.251,3.323)--(11.251,3.328)--(11.251,3.346)%
-  --(11.323,3.224)--(11.323,3.345)--(11.395,3.339)--(11.395,3.335)--(11.395,3.344)--(11.468,3.241)%
-  --(11.468,3.326)--(11.540,3.288)--(11.540,3.307)--(11.612,3.326)--(11.612,3.277)--(11.612,3.313)%
-  --(11.685,3.310)--(11.685,3.311)--(11.685,3.331)--(11.757,3.250)--(11.757,3.313)--(11.757,3.284)%
-  --(11.830,3.337)--(11.830,3.335)--(11.902,3.337)--(11.902,3.299)--(11.974,3.283)--(11.974,3.346)%
-  --(11.974,3.353)--(12.047,3.337)--(12.047,3.350)--(12.119,3.336)--(12.119,3.345)--(12.191,3.336)%
-  --(12.191,3.306)--(12.264,3.310)--(12.264,3.326)--(12.336,3.257)--(12.336,3.322)--(12.408,3.315)%
-  --(12.408,3.311)--(12.481,3.310)--(12.481,3.297)--(12.553,3.288)--(12.553,3.296)--(12.625,3.272)%
-  --(12.625,3.287)--(12.625,3.262)--(12.698,3.292)--(12.698,3.257)--(12.770,3.276)--(12.770,3.235)%
-  --(12.842,3.283)--(12.842,3.245)--(12.915,3.282)--(12.915,3.259)--(12.915,3.234)--(12.987,3.255)%
-  --(12.987,3.291)--(13.059,3.292)--(13.059,3.235)--(13.059,3.294)--(13.132,3.276)--(13.132,3.268)%
-  --(13.132,3.273)--(13.204,3.268)--(13.277,3.281)--(13.349,3.272)--(13.349,3.279)--(13.421,3.290)%
-  --(13.421,3.248)--(13.494,3.279)--(13.566,3.256)--(13.566,3.275)--(13.638,3.278)--(13.638,3.252)%
-  --(13.638,3.285)--(13.711,3.219)--(13.711,3.171)--(13.783,3.197)--(13.783,3.281)--(13.855,3.288)%
-  --(13.855,3.287)--(13.928,3.246)--(13.928,3.284)--(14.000,3.285)--(14.072,3.269)--(14.072,3.255)%
-  --(14.072,3.253)--(14.072,3.209)--(14.145,3.251)--(14.145,3.198)--(14.145,3.242)--(14.217,3.232)%
-  --(14.217,3.254)--(14.217,3.250)--(14.289,3.278)--(14.289,3.292)--(14.362,3.285)--(14.362,3.246)%
-  --(14.434,3.294)--(14.434,3.302)--(14.434,3.305)--(14.506,3.286)--(14.506,3.276)--(14.579,3.247)%
-  --(14.579,3.305)--(14.579,3.233)--(14.651,3.212)--(14.651,3.312)--(14.723,3.287)--(14.723,3.284)%
-  --(14.723,3.300)--(14.796,3.216)--(14.796,3.315)--(14.868,3.308)--(14.941,3.301)--(14.941,3.309)%
-  --(14.941,3.274)--(15.013,3.320)--(15.013,3.316)--(15.013,3.208)--(15.085,3.329)--(15.158,3.301)%
-  --(15.158,3.318)--(15.158,3.264)--(15.230,3.301)--(15.302,3.314)--(15.302,3.285)--(15.302,3.301);
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (2.424,2.025)--(2.424,11.075);
 \gpcolor{color=gp lt color border}
-\draw[gp path] (2.424,11.075)--(2.424,2.697)--(15.447,2.697)--(15.447,11.075)--cycle;
-\node[gp node center,rotate=-270] at (0.292,6.886) {Objective value};
-\node[gp node center] at (8.935,0.215) {Absolute time};
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (2.424,2.025)--(2.424,1.845);
+\draw[gp path] (2.424,11.075)--(2.424,11.255);
+\node[gp node left,rotate=270] at (2.424,1.661) {$0$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (4.595,2.025)--(4.595,11.075);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (4.595,2.025)--(4.595,1.845);
+\draw[gp path] (4.595,11.075)--(4.595,11.255);
+\node[gp node left,rotate=270] at (4.595,1.661) {$50$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (6.765,2.025)--(6.765,11.075);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (6.765,2.025)--(6.765,1.845);
+\draw[gp path] (6.765,11.075)--(6.765,11.255);
+\node[gp node left,rotate=270] at (6.765,1.661) {$100$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (8.936,2.025)--(8.936,11.075);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (8.936,2.025)--(8.936,1.845);
+\draw[gp path] (8.936,11.075)--(8.936,11.255);
+\node[gp node left,rotate=270] at (8.936,1.661) {$150$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (11.106,2.025)--(11.106,11.075);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (11.106,2.025)--(11.106,1.845);
+\draw[gp path] (11.106,11.075)--(11.106,11.255);
+\node[gp node left,rotate=270] at (11.106,1.661) {$200$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (13.277,2.025)--(13.277,11.075);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (13.277,2.025)--(13.277,1.845);
+\draw[gp path] (13.277,11.075)--(13.277,11.255);
+\node[gp node left,rotate=270] at (13.277,1.661) {$250$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (15.447,2.025)--(15.447,11.075);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (15.447,2.025)--(15.447,1.845);
+\draw[gp path] (15.447,11.075)--(15.447,11.255);
+\node[gp node left,rotate=270] at (15.447,1.661) {$300$};
+\draw[gp path] (2.424,11.075)--(2.424,2.025)--(15.447,2.025)--(15.447,11.075)--cycle;
+\gpcolor{rgb color={0.000,0.000,0.000}}
+\gpsetlinewidth{2.00}
+\draw[gp path] (2.424,10.181)--(2.424,9.983)--(2.424,9.939)--(2.424,9.769)--(2.467,9.709)%
+  --(2.467,9.652)--(2.467,9.595)--(2.467,9.554)--(2.467,9.493)--(2.467,9.439)--(2.467,9.424)%
+  --(2.511,9.362)--(2.511,9.360)--(2.511,9.345)--(2.511,9.318)--(2.511,9.274)--(2.511,9.231)%
+  --(2.511,9.177)--(2.511,9.135)--(2.511,9.116)--(2.511,9.085)--(2.511,9.019)--(2.554,8.981)%
+  --(2.554,8.980)--(2.554,8.929)--(2.554,8.897)--(2.554,8.892)--(2.554,8.808)--(2.598,8.796)%
+  --(2.598,8.784)--(2.598,8.780)--(2.598,8.776)--(2.598,8.754)--(2.641,8.752)--(2.641,8.730)%
+  --(2.641,8.688)--(2.641,8.675)--(2.641,8.668)--(2.684,8.631)--(2.684,8.626)--(2.684,8.624)%
+  --(2.684,8.602)--(2.728,8.598)--(2.728,8.592)--(2.728,8.587)--(2.728,8.563)--(2.771,8.555)%
+  --(2.771,8.520)--(2.771,8.519)--(2.771,8.492)--(2.815,8.486)--(2.815,8.475)--(2.815,8.395)%
+  --(2.858,8.374)--(2.858,8.373)--(2.902,8.344)--(2.902,8.331)--(2.902,8.321)--(2.902,8.320)%
+  --(2.945,8.282)--(2.945,8.272)--(2.945,8.269)--(2.945,8.263)--(2.945,8.241)--(2.945,8.238)%
+  --(2.988,8.231)--(3.032,8.226)--(3.075,8.210)--(3.075,8.191)--(3.075,8.181)--(3.075,8.171)%
+  --(3.119,8.147)--(3.119,8.139)--(3.119,8.127)--(3.162,8.127)--(3.205,8.126)--(3.205,8.124)%
+  --(3.205,8.113)--(3.205,8.101)--(3.205,8.084)--(3.292,8.080)--(3.292,8.061)--(3.336,8.047)%
+  --(3.336,8.044)--(3.336,8.037)--(3.379,8.030)--(3.379,8.024)--(3.379,8.015)--(3.379,8.011)%
+  --(3.422,7.981)--(3.422,7.968)--(3.509,7.939)--(3.553,7.937)--(3.553,7.934)--(3.596,7.925)%
+  --(3.596,7.924)--(3.639,7.914)--(3.683,7.906)--(3.726,7.896)--(3.726,7.892)--(3.770,7.887)%
+  --(3.770,7.877)--(3.857,7.876)--(3.943,7.870)--(3.943,7.868)--(3.943,7.866)--(3.987,7.864)%
+  --(4.074,7.863)--(4.204,7.858)--(4.247,7.855)--(4.334,7.851)--(4.421,7.844)--(4.421,7.838)%
+  --(4.681,7.831)--(4.725,7.816)--(4.812,7.813)--(4.812,7.812)--(4.855,7.811)--(4.985,7.806)%
+  --(5.029,7.801)--(5.072,7.796)--(5.202,7.792)--(5.246,7.791)--(5.289,7.776)--(5.419,7.766)%
+  --(5.550,7.764)--(5.767,7.759)--(5.767,7.750)--(5.853,7.748)--(5.897,7.743)--(5.984,7.740)%
+  --(5.984,7.725)--(6.114,7.723)--(6.114,7.714)--(6.157,7.714)--(6.287,7.713)--(6.374,7.704)%
+  --(6.505,10.866)--(6.505,10.827)--(6.548,10.803)--(6.548,10.796)--(6.765,10.786)--(6.808,10.767)%
+  --(6.808,10.748)--(6.895,10.743)--(7.243,10.737)--(7.286,10.734)--(7.329,10.731)--(7.416,10.730)%
+  --(7.633,10.722)--(8.067,10.699)--(8.284,10.695)--(8.892,10.683)--(9.109,10.683)--(10.759,7.640)%
+  --(10.759,7.491)--(10.759,7.401)--(10.759,7.335)--(10.759,7.314)--(10.802,7.253)--(10.802,7.230)%
+  --(10.802,7.194)--(10.802,7.141)--(10.802,7.123)--(10.802,6.929)--(10.802,6.866)--(10.802,6.849)%
+  --(10.846,6.726)--(10.846,6.711)--(10.846,6.706)--(10.846,6.662)--(10.846,6.506)--(10.889,6.444)%
+  --(10.889,6.430)--(10.889,6.420)--(10.889,6.233)--(10.889,6.209)--(10.889,6.198)--(10.932,6.151)%
+  --(10.932,5.987)--(10.932,5.964)--(10.932,5.945)--(10.976,5.917)--(10.976,5.804)--(10.976,5.802)%
+  --(10.976,5.800)--(10.976,5.769)--(10.976,5.649)--(11.019,5.635)--(11.019,5.633)--(11.019,5.628)%
+  --(11.019,5.615)--(11.063,5.611)--(11.063,5.593)--(11.063,5.591)--(11.063,5.564)--(11.063,5.553)%
+  --(11.106,5.537)--(11.106,5.519)--(11.106,5.508)--(11.106,5.495)--(11.193,5.495)--(11.193,5.480)%
+  --(11.193,5.462)--(11.193,5.416)--(11.236,5.404)--(11.236,5.399)--(11.280,5.397)--(11.280,5.377)%
+  --(11.280,5.351)--(11.280,5.341)--(11.280,5.339)--(11.323,5.339)--(11.323,5.331)--(11.366,5.297)%
+  --(11.410,5.290)--(11.453,5.277)--(11.497,5.268)--(11.497,5.248)--(11.497,5.245)--(11.540,5.241)%
+  --(11.584,5.237)--(11.584,5.209)--(11.627,5.201)--(11.670,5.195)--(11.714,5.193)--(11.714,5.191)%
+  --(11.757,5.152)--(11.757,5.145)--(11.757,5.139)--(11.757,5.138)--(11.757,5.134)--(11.844,5.096)%
+  --(11.844,5.093)--(11.887,5.089)--(11.887,5.081)--(11.931,5.074)--(12.018,5.070)--(12.018,5.067)%
+  --(12.018,5.065)--(12.018,5.060)--(12.061,4.937)--(12.061,4.917)--(12.061,4.912)--(12.104,4.904)%
+  --(12.104,4.901)--(12.104,4.883)--(12.148,4.881)--(12.191,4.877)--(12.365,4.874)--(12.365,4.858)%
+  --(12.495,4.848)--(12.495,4.839)--(12.539,4.830)--(12.625,4.799)--(12.625,4.798)--(12.625,4.797)%
+  --(12.669,4.786)--(12.799,4.778)--(12.842,4.775)--(12.842,4.761)--(12.886,4.760)--(12.973,4.756)%
+  --(13.016,4.754)--(13.059,4.753)--(13.059,4.751)--(13.103,4.742)--(13.103,4.735)--(13.103,4.733)%
+  --(13.146,4.727)--(13.146,4.724)--(13.146,4.723)--(13.190,4.711)--(13.190,4.697)--(13.190,4.696)%
+  --(13.233,4.677)--(13.277,4.664)--(13.277,4.652)--(13.363,4.648)--(13.494,4.648)--(13.494,4.647)%
+  --(13.494,4.644)--(13.537,4.643)--(13.580,4.640)--(13.580,4.631)--(13.624,4.622)--(13.667,4.610)%
+  --(13.754,4.606)--(13.754,4.599)--(13.928,4.595)--(14.014,4.593)--(14.449,4.592)--(14.709,4.592)%
+  --(14.839,4.589)--(15.013,2.740)--(15.013,2.713)--(15.013,2.697)--(15.056,2.688);
+\gpcolor{color=gp lt color border}
+\gpsetlinewidth{1.00}
+\draw[gp path] (2.424,11.075)--(2.424,2.025)--(15.447,2.025)--(15.447,11.075)--cycle;
+\node[gp node center,rotate=-270] at (-0.812,6.550) {Objective value};
+\node[gp node center] at (8.935,0.215) {Relative time [S]};
 \node[gp node center] at (8.935,11.537) {Objective value for Weekly Schedule};
 %% coordinates of the plot area
-\gpdefrectangularnode{gp plot 1}{\pgfpoint{2.424cm}{2.697cm}}{\pgfpoint{15.447cm}{11.075cm}}
+\gpdefrectangularnode{gp plot 1}{\pgfpoint{2.424cm}{2.025cm}}{\pgfpoint{15.447cm}{11.075cm}}
 \endtikzpicture
 %% gnuplot variables
