--- a/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_weight_change_plot.tex
+++ b/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_weight_change_plot.tex
@@ -1,103 +1,127 @@
 \begin{tikzpicture}[gnuplot]
 %% generated with GNUPLOT 6.0p1 (Lua 5.2; terminal rev. Jun 2020, script rev. 118)
-%% Mon 02 Dec 2024 02:46:26 PM UTC
+%% Mon 02 Dec 2024 08:28:12 PM UTC
 \path (0.000,0.000) rectangle (12.500,8.750);
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.608,1.841)--(11.947,1.841);
+\draw[gp path] (2.608,2.025)--(11.947,2.025);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.608,1.841)--(2.788,1.841);
-\draw[gp path] (11.947,1.841)--(11.767,1.841);
-\node[gp node right] at (2.424,1.841) {$1.92\times10^{11}$};
+\draw[gp path] (2.608,2.025)--(2.788,2.025);
+\draw[gp path] (11.947,2.025)--(11.767,2.025);
+\node[gp node right] at (2.424,2.025) {$1.91\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.608,2.589)--(11.947,2.589);
+\draw[gp path] (2.608,2.605)--(11.947,2.605);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.608,2.589)--(2.788,2.589);
-\draw[gp path] (11.947,2.589)--(11.767,2.589);
-\node[gp node right] at (2.424,2.589) {$1.925\times10^{11}$};
+\draw[gp path] (2.608,2.605)--(2.788,2.605);
+\draw[gp path] (11.947,2.605)--(11.767,2.605);
+\node[gp node right] at (2.424,2.605) {$1.915\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.608,3.337)--(11.947,3.337);
+\draw[gp path] (2.608,3.185)--(11.947,3.185);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.608,3.337)--(2.788,3.337);
-\draw[gp path] (11.947,3.337)--(11.767,3.337);
-\node[gp node right] at (2.424,3.337) {$1.93\times10^{11}$};
+\draw[gp path] (2.608,3.185)--(2.788,3.185);
+\draw[gp path] (11.947,3.185)--(11.767,3.185);
+\node[gp node right] at (2.424,3.185) {$1.92\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.608,4.085)--(11.947,4.085);
+\draw[gp path] (2.608,3.765)--(11.947,3.765);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.608,4.085)--(2.788,4.085);
-\draw[gp path] (11.947,4.085)--(11.767,4.085);
-\node[gp node right] at (2.424,4.085) {$1.935\times10^{11}$};
+\draw[gp path] (2.608,3.765)--(2.788,3.765);
+\draw[gp path] (11.947,3.765)--(11.767,3.765);
+\node[gp node right] at (2.424,3.765) {$1.925\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.608,4.833)--(11.947,4.833);
+\draw[gp path] (2.608,4.345)--(11.947,4.345);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.608,4.833)--(2.788,4.833);
-\draw[gp path] (11.947,4.833)--(11.767,4.833);
-\node[gp node right] at (2.424,4.833) {$1.94\times10^{11}$};
+\draw[gp path] (2.608,4.345)--(2.788,4.345);
+\draw[gp path] (11.947,4.345)--(11.767,4.345);
+\node[gp node right] at (2.424,4.345) {$1.93\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.608,5.581)--(11.947,5.581);
+\draw[gp path] (2.608,4.925)--(11.947,4.925);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.608,5.581)--(2.788,5.581);
-\draw[gp path] (11.947,5.581)--(11.767,5.581);
-\node[gp node right] at (2.424,5.581) {$1.945\times10^{11}$};
+\draw[gp path] (2.608,4.925)--(2.788,4.925);
+\draw[gp path] (11.947,4.925)--(11.767,4.925);
+\node[gp node right] at (2.424,4.925) {$1.935\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.608,6.329)--(11.947,6.329);
+\draw[gp path] (2.608,5.505)--(11.947,5.505);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.608,6.329)--(2.788,6.329);
-\draw[gp path] (11.947,6.329)--(11.767,6.329);
-\node[gp node right] at (2.424,6.329) {$1.95\times10^{11}$};
+\draw[gp path] (2.608,5.505)--(2.788,5.505);
+\draw[gp path] (11.947,5.505)--(11.767,5.505);
+\node[gp node right] at (2.424,5.505) {$1.94\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.608,7.077)--(11.947,7.077);
+\draw[gp path] (2.608,6.085)--(11.947,6.085);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.608,7.077)--(2.788,7.077);
-\draw[gp path] (11.947,7.077)--(11.767,7.077);
-\node[gp node right] at (2.424,7.077) {$1.955\times10^{11}$};
+\draw[gp path] (2.608,6.085)--(2.788,6.085);
+\draw[gp path] (11.947,6.085)--(11.767,6.085);
+\node[gp node right] at (2.424,6.085) {$1.945\times10^{11}$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (2.608,6.665)--(11.947,6.665);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (2.608,6.665)--(2.788,6.665);
+\draw[gp path] (11.947,6.665)--(11.767,6.665);
+\node[gp node right] at (2.424,6.665) {$1.95\times10^{11}$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (2.608,7.245)--(11.947,7.245);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (2.608,7.245)--(2.788,7.245);
+\draw[gp path] (11.947,7.245)--(11.767,7.245);
+\node[gp node right] at (2.424,7.245) {$1.955\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
@@ -114,97 +138,138 @@
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.608,1.841)--(2.608,7.825);
+\draw[gp path] (2.608,2.025)--(2.608,7.825);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.608,1.841)--(2.608,1.661);
+\draw[gp path] (2.608,2.025)--(2.608,1.845);
 \draw[gp path] (2.608,7.825)--(2.608,8.005);
-\node[gp node left,rotate=270] at (2.608,1.477) {$0$};
+\node[gp node left,rotate=270] at (2.608,1.661) {$0$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (4.476,1.841)--(4.476,7.825);
+\draw[gp path] (3.942,2.025)--(3.942,7.825);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (4.476,1.841)--(4.476,1.661);
-\draw[gp path] (4.476,7.825)--(4.476,8.005);
-\node[gp node left,rotate=270] at (4.476,1.477) {$5$};
+\draw[gp path] (3.942,2.025)--(3.942,1.845);
+\draw[gp path] (3.942,7.825)--(3.942,8.005);
+\node[gp node left,rotate=270] at (3.942,1.661) {$50$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (6.344,1.841)--(6.344,7.825);
+\draw[gp path] (5.276,2.025)--(5.276,7.825);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (6.344,1.841)--(6.344,1.661);
-\draw[gp path] (6.344,7.825)--(6.344,8.005);
-\node[gp node left,rotate=270] at (6.344,1.477) {$10$};
+\draw[gp path] (5.276,2.025)--(5.276,1.845);
+\draw[gp path] (5.276,7.825)--(5.276,8.005);
+\node[gp node left,rotate=270] at (5.276,1.661) {$100$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (8.211,1.841)--(8.211,7.825);
+\draw[gp path] (6.610,2.025)--(6.610,7.825);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (8.211,1.841)--(8.211,1.661);
-\draw[gp path] (8.211,7.825)--(8.211,8.005);
-\node[gp node left,rotate=270] at (8.211,1.477) {$15$};
+\draw[gp path] (6.610,2.025)--(6.610,1.845);
+\draw[gp path] (6.610,7.825)--(6.610,8.005);
+\node[gp node left,rotate=270] at (6.610,1.661) {$150$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (10.079,1.841)--(10.079,7.825);
+\draw[gp path] (7.945,2.025)--(7.945,7.825);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (10.079,1.841)--(10.079,1.661);
-\draw[gp path] (10.079,7.825)--(10.079,8.005);
-\node[gp node left,rotate=270] at (10.079,1.477) {$20$};
+\draw[gp path] (7.945,2.025)--(7.945,1.845);
+\draw[gp path] (7.945,7.825)--(7.945,8.005);
+\node[gp node left,rotate=270] at (7.945,1.661) {$200$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (11.947,1.841)--(11.947,7.825);
+\draw[gp path] (9.279,2.025)--(9.279,7.825);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (11.947,1.841)--(11.947,1.661);
+\draw[gp path] (9.279,2.025)--(9.279,1.845);
+\draw[gp path] (9.279,7.825)--(9.279,8.005);
+\node[gp node left,rotate=270] at (9.279,1.661) {$250$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (10.613,2.025)--(10.613,7.825);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (10.613,2.025)--(10.613,1.845);
+\draw[gp path] (10.613,7.825)--(10.613,8.005);
+\node[gp node left,rotate=270] at (10.613,1.661) {$300$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (11.947,2.025)--(11.947,7.825);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (11.947,2.025)--(11.947,1.845);
 \draw[gp path] (11.947,7.825)--(11.947,8.005);
-\node[gp node left,rotate=270] at (11.947,1.477) {$25$};
-\draw[gp path] (2.608,7.825)--(2.608,1.841)--(11.947,1.841)--(11.947,7.825)--cycle;
+\node[gp node left,rotate=270] at (11.947,1.661) {$350$};
+\draw[gp path] (2.608,7.825)--(2.608,2.025)--(11.947,2.025)--(11.947,7.825)--cycle;
 \gpcolor{rgb color={0.000,0.000,0.000}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.608,7.757)--(2.608,7.582)--(2.608,7.460)--(2.608,7.278)--(2.608,7.073)%
-  --(2.608,6.744)--(2.608,6.725)--(2.982,6.483)--(2.982,6.393)--(2.982,6.079)--(2.982,5.999)%
-  --(2.982,5.981)--(2.982,5.930)--(3.355,5.833)--(3.355,5.658)--(3.355,5.594)--(3.355,5.531)%
-  --(3.355,5.507)--(3.729,5.506)--(3.729,5.416)--(3.729,5.371)--(4.102,5.330)--(4.102,5.281)%
-  --(4.102,5.185)--(4.102,5.106)--(4.102,5.061)--(4.476,4.777)--(4.849,4.776)--(4.849,4.576)%
-  --(4.849,4.413)--(4.849,4.238)--(5.223,4.179)--(5.223,4.163)--(5.223,4.137)--(5.223,4.122)%
-  --(5.223,4.111)--(5.223,4.105)--(5.223,4.056)--(5.596,4.022)--(5.596,3.861)--(5.596,3.809)%
-  --(5.970,3.720)--(5.970,3.695)--(5.970,3.659)--(6.344,3.633)--(6.344,3.604)--(6.344,3.296)%
-  --(6.717,3.279)--(6.717,3.236)--(6.717,3.185)--(6.717,3.183)--(6.717,3.118)--(7.091,3.074)%
-  --(7.091,3.031)--(7.464,3.017)--(7.464,2.897)--(7.464,2.648)--(7.838,2.591)--(7.838,2.579)%
-  --(7.838,2.540)--(8.211,2.507)--(8.211,2.469)--(8.211,2.362)--(8.959,2.310)--(9.332,2.303)%
-  --(9.332,2.287)--(9.332,2.268)--(9.332,2.215)--(9.706,2.199)--(9.706,2.179)--(10.079,2.144)%
-  --(10.826,2.119)--(11.200,2.047)--(11.200,2.010)--(11.947,1.974);
+\draw[gp path] (2.608,7.515)--(2.608,7.358)--(2.608,7.253)--(2.608,6.981)--(2.608,6.881)%
+  --(2.608,6.668)--(2.608,6.621)--(2.608,6.374)--(2.608,6.221)--(2.608,6.205)--(2.635,6.092)%
+  --(2.635,5.884)--(2.635,5.881)--(2.635,5.834)--(2.635,5.730)--(2.635,5.660)--(2.661,5.654)%
+  --(2.661,5.598)--(2.661,5.558)--(2.661,5.538)--(2.661,5.490)--(2.688,5.321)--(2.688,5.319)%
+  --(2.688,5.298)--(2.688,5.252)--(2.688,5.193)--(2.688,5.146)--(2.715,5.091)--(2.715,4.887)%
+  --(2.715,4.808)--(2.741,4.692)--(2.741,4.675)--(2.741,4.550)--(2.768,4.528)--(2.768,4.478)%
+  --(2.768,4.445)--(2.768,4.408)--(2.768,4.361)--(2.795,4.238)--(2.795,4.206)--(2.795,4.100)%
+  --(2.795,4.059)--(2.821,4.020)--(2.821,4.005)--(2.848,3.967)--(2.848,3.948)--(2.875,3.913)%
+  --(2.902,3.894)--(2.902,3.888)--(2.928,3.843)--(2.928,3.826)--(2.928,3.821)--(2.955,3.801)%
+  --(2.955,3.759)--(2.955,3.740)--(2.982,3.668)--(2.982,3.659)--(3.008,3.652)--(3.008,3.616)%
+  --(3.035,3.615)--(3.035,3.586)--(3.062,3.572)--(3.088,3.548)--(3.088,3.526)--(3.115,3.502)%
+  --(3.115,3.487)--(3.142,3.467)--(3.195,3.460)--(3.222,3.452)--(3.275,3.441)--(3.275,3.433)%
+  --(3.275,3.403)--(3.275,3.394)--(3.275,3.380)--(3.302,3.370)--(3.302,3.331)--(3.302,3.321)%
+  --(3.328,3.272)--(3.328,3.250)--(3.328,3.200)--(3.355,3.186)--(3.355,3.174)--(3.355,3.160)%
+  --(3.382,3.138)--(3.382,3.128)--(3.408,2.921)--(3.408,2.903)--(3.435,2.893)--(3.435,2.886)%
+  --(3.462,2.866)--(3.515,2.845)--(3.542,2.841)--(3.569,2.805)--(3.569,2.751)--(3.595,2.717)%
+  --(3.649,2.710)--(3.675,2.703)--(3.729,2.690)--(3.782,2.679)--(3.889,2.678)--(3.942,2.651)%
+  --(3.969,2.630)--(4.076,2.616)--(4.102,2.611)--(4.129,2.610)--(4.182,2.605)--(4.236,2.597)%
+  --(4.289,2.590)--(4.396,2.556)--(4.449,2.544)--(4.529,2.525)--(4.609,2.521)--(4.636,2.518)%
+  --(4.663,2.516)--(4.663,2.515)--(4.716,2.511)--(4.823,2.505)--(4.823,2.498)--(4.876,2.483)%
+  --(4.956,2.481)--(5.036,2.476)--(5.063,2.475)--(5.143,2.465)--(5.170,2.462)--(5.303,2.460)%
+  --(5.570,2.460)--(5.650,2.456)--(5.837,2.455)--(6.050,2.445)--(6.370,2.439)--(6.397,2.433)%
+  --(6.397,2.430)--(6.424,2.408)--(6.664,2.405)--(6.717,2.389)--(6.744,2.388)--(6.797,2.387)%
+  --(6.824,2.381)--(6.824,2.379)--(6.904,2.365)--(6.957,2.349)--(7.091,2.347)--(7.144,2.342)%
+  --(7.197,2.338)--(7.411,2.322)--(7.544,2.321)--(7.624,2.305)--(7.758,2.292)--(7.811,2.273)%
+  --(7.945,2.263)--(7.971,2.253)--(8.051,2.248)--(8.105,2.243)--(8.158,2.238)--(8.371,2.231)%
+  --(8.532,2.229)--(8.745,2.223)--(8.932,2.222)--(8.932,2.216)--(9.199,2.207)--(9.412,2.181)%
+  --(9.626,2.168)--(9.812,2.151)--(10.346,2.145)--(10.453,2.140)--(10.720,2.126)--(10.746,2.122)%
+  --(10.773,2.121)--(10.800,2.118)--(10.933,2.111)--(10.960,2.106)--(11.173,2.092)--(11.227,2.090)%
+  --(11.280,2.089)--(11.387,2.088)--(11.493,2.085)--(11.493,2.080)--(11.707,2.075)--(11.734,2.069);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.608,7.825)--(2.608,1.841)--(11.947,1.841)--(11.947,7.825)--cycle;
-\node[gp node center,rotate=-270] at (-0.812,4.833) {Objective value};
+\draw[gp path] (2.608,7.825)--(2.608,2.025)--(11.947,2.025)--(11.947,7.825)--cycle;
+\node[gp node center,rotate=-270] at (-0.812,4.925) {Objective value};
 \node[gp node center] at (7.277,0.215) {Relative time [S]};
 \node[gp node center] at (7.277,8.287) {Objective value for Weekly Schedule};
 %% coordinates of the plot area
-\gpdefrectangularnode{gp plot 1}{\pgfpoint{2.608cm}{1.841cm}}{\pgfpoint{11.947cm}{7.825cm}}
+\gpdefrectangularnode{gp plot 1}{\pgfpoint{2.608cm}{2.025cm}}{\pgfpoint{11.947cm}{7.825cm}}
 \end{tikzpicture}
 %% gnuplot variables
