--- a/memos/decision-brain/summary.tex
+++ b/memos/decision-brain/summary.tex
@@ -1,21 +1,23 @@
 \section{Summary}
-I am doing a research project in collaboration with Total Energies. I am currently modelling 
-their scheduling process in a way that will allow us to optimize their maintenance operations. My main concern
-in this process is making the project succeed with the numerous decisions that I have to make but 
-which I feel unequipped for. I believe that an external stay at Decision Brain will provide the 
+I am a third year PhD fellow at DTU Construct and DTU Management and I am currently involved in a research project in collaboration with Total Energies. The focus of my thesis is modelling 
+their scheduling process in a way that will allow for optimizing their maintenance operations by informing key decision makers in real time. While I feel
+the product could be of great utility, I face a number difficult problems which I have outlined below. I believe that an external stay at Decision Brain will provide the 
 expertise and guidance needed to making the project succeed or informing the future direction of my career path. 
 Below is a list of my main issues so far that I have struggled to solve by myself. 
 
 \textbf{My Main Issues:}
 \begin{itemize}
-	\item Developing a correct API without a frontend to get user feedback, especially one the dynamic components of the API.
+	\item Developing an API without a frontend to get user feedback, especially one the dynamic components of the API.
 	\begin{itemize}
-		\item Stakeholders struggle to grasp the concept without a visual representation, making it challenging to communicate the API's functionality.
+		\item Stakeholders struggle to grasp the concept without a visual representation, making it challenging to communicate the API's functionality. Developing both is time consuming.
 	\end{itemize}
+	% TODO: Kommentar: Dette er for vagt... Alle har disse probler og ikke noget de kommer til at hjælpe med.
 	\item Many topics are outside the scope of my research project due to a lack of the essential skills. 
 	\begin{itemize}
+		% TODO: WARNING: Ukonkret. Skriv som om de er idioter. Det er nok ikke en fagperson der kommer til at læse det første gang.
 		\item Primarily stakeholder management and UX development.
 	\end{itemize}
+	% TODO: Jeg ville ændre dette til noget med Software project management, financial maturity, academia vs commercial
 	\item Uncertainty about the project's financial viability and whether to continue its development within an academic setting.
 	\begin{itemize}
 		\item I think that the team at Decision Brain will be able to provide guidance here.
@@ -28,3 +30,7 @@ Below is a list of my main issues so far that I have struggled to solve by mysel
 	\item Opportunity to evaluate and potentially recruit a skilled researcher. 
 	\item Access to a partial implementation of innovative scheduling code.
 \end{itemize}
+
+I believe an external stay at Decision Brain could greatly improve my personal skills and usefulness for society
+% TODO: Jeg synes ikke helt sidste del af sætningen er der, måske du kan komme på noget bedre. Jeg synes der skal være en afslutning på summary.
+while simultaniously benefit Decision Brain where I suspect my expertise within scheduling systems might add to your knowledge base.
