--- a/memos/decision-brain/personal.tex
+++ b/memos/decision-brain/personal.tex
@@ -1,11 +1,21 @@
 \section{Personal}
 
-I am an introverted person who prefers few but close partnerships. To perform at a high level
-I benefit immensely from having the right colleagues who provide support and complement the 
-qualities I may lack. I focus on designing systems on a higher level, often feeling worried if I 
-do not believe that I or my team is working on tasks that are not aligned with our final goals. 
-This is good for inspiring and setting direction, but it is clear to me that people with other 
-qualities are also needed to make a project work and be successful.
+
+% WARNING: Dette er meget rodet og svært at følge med i, hvad din pointe er. Du beskriver flere ting, som enten virker lidt random eller ikke færdigøres.
+% Fx "I focus on designing systems...", og fortsætter med noget omkring projecthåndtering.
+% Jeg ville opbygge det som:
+I am an introverted person who prefers few but close partnerships. I would say my greatest strengths are:
+\begin{itemize}
+	\item Very maticulate about understanding the problem thereafter finding the best solution
+	\item Creating reliable and automatic systems, whether for coding applications, scripting workflows, drafting documents (LaTeX or Typst), etc.
+\end{itemize}
+
+I would say my greatest weaknesess are:
+\begin{itemize}
+	\item Communication skill, I benefit a lot from a proactive and competent teamleader.
+	\item Project management and prioritization is part of my job where I have consistently demonstrated that I have a blindspot.  
+\end{itemize}
+ 
 
 My hobbies include running (25-30 km per week), reading non-fiction on various topics not directly related to work; 
 and engaging in creative coding projects with friends.
